- GUI layout improvements.

0.1.0-alpha.20:
===============
- (askchoices) abort fix.
- WB tooltypes promotion.

0.1.0-alpha.21:
===============
- (message) abort fix.

0.1.0-alpha.22:
===============
- Default locale promoted to @language.

0.1.0-alpha.23:
===============
- Help bubble fix.

0.1.0-alpha.24:
===============
- (debug) prints undefined variables as they should.

0.1.0-alpha.25:
===============
- Naked (debug) allowed.
- (getsum) using Adler-32.
- DEFUSER / MINUSER tooltype promotion (welcome) fix.
- Installer overwrite on same version but different checksum.

0.1.0-alpha.26:
===============
- Application description fixed to make Exchange happy (polluks).
- MorphOS adaptations.

0.1.0-alpha.27:
===============
- Help bubble moved to the top.
- Improved error handling.

0.1.0-alpha.28:
===============
- Performance improvements.
- Aminet compliant naming.
- Improved file copy abort.
- Size reduction.

0.1.0-alpha.29:
===============
- '' handled by (exist).
- Proper AmigaDOS return values.
- Non naked options allowed (IconDeluxe).
- Default @app-name set to 'Test App' (mimic CBM Installer).
- Fixed (abort) button.
- (copyfiles) (choices) subdirectory fix.

0.1.0-alpha.30:
===============
- Locale support (polluks).
- German translation (polluks).
- Swedish translation.
- (database) runtime cpu detection fixed (polluks).
- (copyfiles) (choices) non strict mode (ign-addon-ods).
- (copyfiles) (fonts) fixed.
- (startup) @app-name fallback when missing <appname> argument (OS4Emu_1.8).

0.1.0-alpha.31:
===============
- Empty (help) options allowed (InstallerGen).
- (database) can report name of OS.
- (askoptions) bug affecting invisible items fixed.
- (getversion) corner case fix.
- (pathonly) trailing slash skipped.
- Symbols made case insensitive (MCC_BWin).
- (confirm) non numerical user levels allowed (MCC_DateString and MCC_DateText).

0.1.0-alpha.32:
===============
- (askchoice) empty choices fixed.
- Italian translation (Samir Hawamdeh).
- ?