@@ -21,6 +21,7 @@ enum
     ARG_APPNAME,
     ARG_MINUSER,
     ARG_DEFUSER,
+    ARG_LANGUAGE,
     ARG_LOGFILE,
     ARG_NOLOG,
     ARG_NOPRETEND,
