@@ -175,4 +175,5 @@
 ===============
 - (askchoice) empty choices fixed.
 - Italian translation (Samir Hawamdeh).
+- LANGUAGE tooltype promoted to @language.
 - ?
